instead of 3 files .env is now alone in the root folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   db:
     image: postgres:14.9
@@ -9,15 +9,15 @@ services:
       POSTGRES_PASSWORD: ${PGPASSWORD}
       POSTGRES_DB: effective_mobile
     ports:
-      - "5432:5432"
+      - '5432:5432'
     networks:
       - backend
 
   rabbit:
-    image: "rabbitmq:3-management"
+    image: 'rabbitmq:3-management'
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - '5672:5672'
+      - '15672:15672'
     networks:
       - backend
 
@@ -26,9 +26,11 @@ services:
     # command: ["./wait-for-it.sh", "db:5432", "--", "command to start your service"]
     command: bash -c  'while !</dev/tcp/db/5432; do sleep 1; done; while !</dev/tcp/rabbit/5672; do sleep 1; done; make db-migrate; npm start'
     ports:
-      - "3000:3000"
+      - '3000:3000'
+    env_file:
+      - ./.env
     expose:
-      - "3000"
+      - '3000'
     depends_on:
       - db
       - rabbit
@@ -42,9 +44,11 @@ services:
     # command: ["./wait-for-it.sh", "db:5432", "--", "command to start your service"]
     command: bash -c  'while !</dev/tcp/db/5432; do sleep 1; done; while !</dev/tcp/rabbit/5672; do sleep 1; done; make db-migrate; npm start'
     ports:
-      - "5000:5000"
+      - '5000:5000'
     expose:
-      - "5000"
+      - '5000'
+    env_file:
+      - ./.env
     depends_on:
       - db
       - rabbit
